<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_controller</name>
  <version>0.4.0</version>
  <description>Bulnabi 2024 vehicle controller</description>
  <maintainer email="juyong3393@snu.ac.kr">Juyong Shin</maintainer>
  <license>Apache License 2.0</license>

  <depend>px4-msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
